--- a/DeAnNhom/Views/Product/Details.cshtml
+++ b/DeAnNhom/Views/Product/Details.cshtml
@@ -10,13 +10,31 @@
     ViewBag.Title = Model.product.ProductName;
     Layout = "~/Views/Shared/Layout/_Layout.cshtml";
 
-    var manager = HttpContext.Current.GetOwinContext().GetUserManager<ApplicationUserManager>();
-    var seller = manager.Users.Where(u => u.Id == Model.product.SellerID).First();
     var sizes = Model.product.Sizes.Split(';');
+
+    bool UserIsSeller = Model.product.SellerID == User.Identity.GetUserId();
 }
 
-<div class="m-auto h-max max-w-screen-xl flex flex-col gap-5">
-    <section class="mt-5 p-4 text-black bg-white rounded-md shadow-lg flex gap-10">
+<div class="mx-auto h-max max-w-screen-xl w-full flex flex-col gap-5">
+    <section class="relative mt-5 p-4 text-black bg-white rounded-md shadow-lg flex gap-10">
+        @if (UserIsSeller)
+        {
+            <div class="absolute top-5 right-5">
+                <div class="dropdown dropdown-end">
+                    <label tabindex="0" class="w-12 btn btn-ghost">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </label>
+                    <ul tabindex="0" class="dropdown-content menu p-2 shadow-lg bg-base-100 rounded-box w-max">
+                        <li>
+                            <label for="my-modal-4" id="openModel" class="text-center cursor-pointer">
+                                <i class="fa-solid fa-trash"></i> Xóa
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        }
+
         <div id="productImg" class="flex items-center justify-center min-w-[450px] h-[450px] overflow-hidden rounded-md">
             <img src="@Url.Content(Model.product.ProductImage)" id="UploadImgHolder" height="450" width="450" />
         </div>
@@ -70,10 +88,10 @@
                 </div>
 
                 <div class="text-lg" id="btnGroup">
-                    <button class="bg-[#ffeee8] hover:bg[#fff5f1] text-[#f05d40] py-2 px-4 rounded-md border-2 border-[#f05d40]" type="button" onclick="addToCart()">
+                    <button class="bg-[#ffeee8] hover:bg[#fff5f1] text-[#f05d40] py-2 px-4 rounded-md border-2 border-[#f05d40] disabled:cursor-not-allowed disabled:border-transparent" disabled=@UserIsSeller type="button" onclick="addToCart()">
                         <i class="fa-solid fa-cart-plus"></i> Thêm vào giỏ hàng
                     </button>
-                    <button class="bg-[#f05d40] text-white py-2 px-4 rounded-md disabled:bg-[#f4836c]" type="submit">
+                    <button class="bg-[#f05d40] text-white py-2 px-4 rounded-md disabled:bg-[#f4836c] disabled:cursor-not-allowed" disabled=@UserIsSeller type="submit">
                         Mua ngay
                     </button>
                 </div>
@@ -83,11 +101,11 @@
 
     <section class="p-4 text-black bg-white rounded-md shadow-lg flex justify-between items-center">
         <div class="flex gap-5">
-            <img src="@Url.Content(seller.ProfileImg)"
+            <img src="@Url.Content(Model.product.Seller.User.ProfileImg)"
                  class="w-[78px] h-[78px] rounded-full border border-[#f7412d]" />
             <div class="flex flex-col justify-between">
-                <span> @(seller.Seller.ShopName == "" ? seller.Customer.Name : seller.Seller.ShopName)</span>
-                <a href="@Url.Action("Index", new { sellerID = seller.Id })" class="py-2 px-4 bg-[#f6402d] text-white rounded-md">
+                <span> @(Model.product.Seller.ShopName)</span>
+                <a href="@Url.Action("Index", new { sellerID = Model.product.SellerID })" class="py-2 px-4 bg-[#f6402d] text-white rounded-lg w-max">
                     Xem shop
                 </a>
             </div>
@@ -99,7 +117,7 @@
             </div>
             <div>
                 <span class="text-[#f6402d]"> Products: </span>
-                @Html.Action("TotalProduct", new { sellerID = seller.Id })
+                @Html.Action("TotalProduct", new { sellerID = Model.product.SellerID })
             </div>
         </div>
     </section>
@@ -119,6 +137,30 @@
     </section>
 </div>
 
+@section model
+{
+    <!-- Put this part before </body> tag -->
+    <input type="checkbox" id="my-modal-4" class="modal-toggle" />
+    <label for="my-modal-4" class="modal cursor-pointer">
+        <label class="modal-box relative" for="">
+            @using (Html.BeginForm("Delete", "Product", FormMethod.Post, new { @class = "text-center flex flex-col gap-5" }))
+            {
+                @Html.AntiForgeryToken()
+                <input value="@Model.product.ProductID" class="hidden" name="productID" id="productID" />
+                <h3 class="text-5xl text-red-600"> Cảnh báo </h3>
+                <p class="text-xl">
+                    Bạn có chắc bạn muốn xóa sản phẩm @Model.product.ProductName
+                </p>
+                <div class="w-full flex items-center justify-end">
+                    <button type="submit" class="bg-red-600 text-white rounded-md py-2 px-5">
+                        Xóa
+                    </button>
+                </div>
+            }
+        </label>
+    </label>
+}
+
 @section script
 {
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
@@ -128,7 +170,7 @@
         dayjs.extend(window.dayjs_plugin_relativeTime);
         dayjs.extend(window.dayjs_plugin_customParseFormat);
 
-        $("#joinedDate")[0].innerText = dayjs("@seller.JoinedDate.ToString("dd-MM-yyyy HH:mm:ss")", "DD-MM-YYYY HH:mm:ss").fromNow();
+        $("#joinedDate")[0].innerText = dayjs("@(Model.product.Seller.User.JoinedDate?.ToString("dd-MM-yyyy HH:mm:ss"))", "DD-MM-YYYY HH:mm:ss").fromNow();
 
         const addToCart = async () => {
             const id = @Model.product.ProductID;
